--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,174 @@
-pytokenizations
-transformers[sentencepiece]
-datasets
-torch
-torchvision
-torchaudio
-snorkel
-optuna
-wandb
-alipy
-sentence-transformers
-openai
+absl-py==2.1.0
+aiohappyeyeballs==2.3.5
+aiohttp==3.10.3
+aiosignal==1.3.1
+alembic==1.13.2
+alipy==1.2.5
+annotated-types==0.7.0
+anyio==4.4.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+async-timeout==4.0.3
+attrs==24.2.0
+autopage==0.5.2
+blis==0.7.11
+cachetools==5.4.0
+catalogue==2.0.10
+certifi==2024.7.4
+cffi==1.17.0
+charset-normalizer==3.3.2
+click==8.1.7
+cliff==4.7.0
+cloudpathlib==0.18.1
+cmaes==0.11.0
+cmd2==2.4.3
+colorlog==6.8.2
+confection==0.1.5
+contourpy==1.1.1
+cvxpy==1.1.15
+cycler==0.12.1
+cymem==2.0.8
+cytoolz==0.12.3
+datasets==2.20.0
+dill==0.3.8
+distro==1.9.0
+docker-pycreds==0.4.0
+ecos==2.0.14
+exceptiongroup==1.2.2
+faiss-gpu==1.7.2
+filelock==3.15.4
+flyingsquid==0.0.0a0
+fonttools==4.53.1
+frozenlist==1.4.1
+fsspec==2024.5.0
+future==1.0.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.33.0
+google-auth-oauthlib==1.0.0
+greenlet==3.0.3
+grpcio==1.65.4
+h11==0.14.0
+higher==0.2.1
+hmmlearn==0.3.2
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.24.5
+idna==3.7
+importlib_metadata==8.2.0
+importlib_resources==6.4.0
+Jinja2==3.1.4
+jiter==0.5.0
+joblib==1.4.2
+kiwisolver==1.4.5
+langcodes==3.4.0
+language_data==1.2.0
+liac-arff==2.5.0
+llvmlite==0.41.1
+Mako==1.3.5
+marisa-trie==1.2.0
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.7.5
+mdurl==0.1.2
+minio==7.2.7
+multidict==6.0.5
+multiprocess==0.70.16
+munkres==1.1.4
+murmurhash==1.0.10
+networkx==2.6.3
+nltk==3.8.2
+numba==0.43.0
+numbskull==0.1.1
+numpy==1.22.3
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+oauthlib==3.2.2
+openai==1.40.6
+openml==0.14.2
+optuna==2.10.0
+osqp==0.6.7.post1
+packaging==24.1
+pandas==2.0.0
+pbr==6.0.0
+pillow==10.4.0
+platformdirs==4.2.2
+preshed==3.0.9
+prettytable==3.11.0
+protobuf==5.27.3
+psutil==6.0.0
+pyarrow==17.0.0
+pyarrow-hotfix==0.6
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pycryptodome==3.20.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+Pygments==2.18.0
+pyparsing==3.1.2
+pyperclip==1.9.0
+python-dateutil==2.9.0.post0
+pytokenizations==0.8.4
+pytz==2024.1
+PyYAML==6.0.2
+qdldl==0.1.7.post4
+regex==2024.7.24
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.7.1
+rsa==4.9
+safetensors==0.4.4
+scikit-learn==0.24.2
+scipy==1.10.1
+scs==3.2.6
+sentence-transformers==3.0.1
+sentencepiece==0.2.0
+sentry-sdk==2.12.0
+seqeval==1.2.2
+setproctitle==1.3.3
+shellingham==1.5.4
+six==1.16.0
+skweak==0.3.3
+smart-open==7.0.4
+smmap==5.0.1
+sniffio==1.3.1
+snorkel==0.9.9
+snorkel-metal==0.5.0
+spacy==3.7.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.32
+srsly==2.4.8
+stevedore==5.2.0
+tenacity==9.0.0
+tensorboard==2.14.0
+tensorboard-data-server==0.7.2
+tensorboardX==2.6.2.2
+thinc==8.2.5
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+toolz==0.12.1
+torch==1.13.1
+torchaudio==0.13.1
+torchvision==0.14.1
+tqdm==4.66.5
+transformers==4.44.0
+typer==0.12.3
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+wandb==0.17.6
+wasabi==1.1.3
+wcwidth==0.2.13
+weasel==0.4.1
+Werkzeug==3.0.3
+wrapt==1.16.0
+ws-benchmark==1.1.2rc0
+xmltodict==0.13.0
+xxhash==3.4.1
+yarl==1.9.4
+zipp==3.20.0
